Added cards for week days and add responsive slider for mobile devices

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,3 +27,7 @@ body {
   background: var(--background);
   font-family: var(--font-poppins), sans-serif;
 }
+
+.invisible-scrollbar::-webkit-scrollbar {
+  display: none;
+}
